change @import for normalize

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,4 @@
-// referrence https://github.com/JohnAlbin/normalize-scss#how-to-use-it
-@import '../../node_modules/normalize-scss/sass/normalize/import-now';
+@import "normalize.css";
 
 @import '__variables';
 @import '__base';
