--- a/src/contact.pug
+++ b/src/contact.pug
@@ -7,7 +7,7 @@ html(lang='en')
         link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Anton|Playfair+Display:400,700,900,900i')
         link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:300,400,600,700,800')
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-        link(rel='stylesheet', href='css/style.min.css')
+        link(rel='stylesheet', href='css/style.css')
         meta(name='description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
         meta(name='keywords', content='kurt obando, portfolio')
         link(rel='author', href='https://plus.google.com/u/0/114919468176469695769')
@@ -95,4 +95,4 @@ html(lang='en')
                         i.fa.fa-youtube-play
                     a(href='http://bit.ly/2Io2Kl5')
                         i.fa.fa-github
-        script(src='js/script.min.js')
+        script(src='js/script.js')
