--- a/src/jade/head.jade
+++ b/src/jade/head.jade
@@ -1,5 +1,6 @@
 meta(charset='utf-8')
 meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 
 meta(name='description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
 meta(name='keywords', content='kurt obando, portfolio')
@@ -9,8 +10,6 @@ link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans+C
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 link(rel='stylesheet', href='css/style.css')
 
-link(rel='author', href='https://plus.google.com/u/0/114919468176469695769')
-link(rel='canonical', href='https://plus.google.com/u/0/114919468176469695769')
 link(rel='apple-touch-icon', sizes='57x57', href='images/fav/apple-icon-57x57.png')
 link(rel='apple-touch-icon', sizes='60x60', href='images/fav/apple-icon-60x60.png')
 link(rel='apple-touch-icon', sizes='72x72', href='images/fav/apple-icon-72x72.png')
@@ -20,6 +19,7 @@ link(rel='apple-touch-icon', sizes='120x120', href='images/fav/apple-icon-120x12
 link(rel='apple-touch-icon', sizes='144x144', href='images/fav/apple-icon-144x144.png')
 link(rel='apple-touch-icon', sizes='152x152', href='images/fav/apple-icon-152x152.png')
 link(rel='apple-touch-icon', sizes='180x180', href='images/fav/apple-icon-180x180.png')
+
 link(rel='icon', type='image/png', sizes='192x192', href='images/fav/android-icon-192x192.png')
 link(rel='icon', type='image/png', sizes='32x32', href='images/fav/favicon-32x32.png')
 link(rel='icon', type='image/png', sizes='96x96', href='images/fav/favicon-96x96.png')
@@ -29,15 +29,18 @@ link(rel='manifest', href='images/fav/manifest.json')
 meta(name='msapplication-TileColor', content='#ffffff')
 meta(name='msapplication-TileImage', content='images/fav/ms-icon-144x144.png')
 meta(name='theme-color', content='#ffffff')
+
 meta(property='og:url', content='https://kurtobando.com/')
 meta(property='og:image', content='images/preview.png')
 meta(property='og:description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
 meta(property='og:title', content='Hello, I am Kurt!')
 meta(property='og:site_name', content='Hello, I am Kurt!')
 meta(property='og:see_also', content='https://kurtobando.com/')
+
 meta(itemprop='name', content='Hello, I am Kurt!')
 meta(itemprop='description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
 meta(itemprop='image', content='images/preview.png')
+
 meta(name='twitter:card', content='an aspiring cinematographer and front-end developer, founder of cityescape.ph')
 meta(name='twitter:url', content='images/preview.png')
 meta(name='twitter:title', content='Hello, I am Kurt!')
@@ -45,3 +48,12 @@ meta(name='twitter:description', content='Hi, my name is Kurt, an aspiring cinem
 meta(name='twitter:image', content='images/preview.png')
 
 title Hello I am Kurt!
+
+script(src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js', type='text/javascript')
+script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-121702615-1')
+script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-121702615-1');
+
