--- a/src/jade/head.jade
+++ b/src/jade/head.jade
@@ -6,6 +6,8 @@ meta(name='description', content='Hi, my name is Kurt, an aspiring cinematograph
 meta(name='keywords', content='kurt obando, portfolio')
 
 link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+link(href='https://fonts.googleapis.com/css?family=Lora:400,700', rel='stylesheet')
+link(href='https://fonts.googleapis.com/css?family=Montserrat:300,400', rel='stylesheet')
 link(rel='stylesheet', href='css/style.css')
 
 link(rel='apple-touch-icon', sizes='57x57', href='images/fav/apple-icon-57x57.png')
@@ -47,7 +49,7 @@ meta(name='twitter:image', content='images/preview.png')
 
 title Hello I am Kurt!
 
-script(src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js', type='text/javascript')
+script(async='', src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js', type='text/javascript')
 script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-121702615-1')
 script.
     window.dataLayer = window.dataLayer || [];
