added variable fonts and remove old variables

--- a/src/sass/__variables.scss
+++ b/src/sass/__variables.scss
@@ -1,18 +1,3 @@
-$font-anton: 				'Anton', sans-serif;
-$font-playfair-display: 	'Playfair Display', serif;
-$font-open-sans-condensed: 	'Open Sans Condensed', sans-serif;
-$font-open-sans: 			'Open Sans', sans-serif;
-
+$font-montserrat:           'Montserrat', sans-serif;
+$font-lora:                 'Lora', serif;
 $font-size: 16px;
-
-$color-gray-000: #252525;
-$color-gray-002: #454545;
-$color-gray-003: #757575;
-$color-gray-004: #e2e2e2;
-$color-white: 	 #fff;
-
-$bg-img-home: 		'../images/home-bg-image.jpg';
-$bg-img-contact: 	'../images/contact-bg-image.jpg';
-$bg-img-cityescape:	'../images/cityescape-featured-images.jpg';
-
-$max-width: 	1280px;
