--- a/src/jade/head.jade
+++ b/src/jade/head.jade
@@ -20,18 +20,12 @@ link(rel='apple-touch-icon', sizes='144x144', href='images/fav/apple-icon-144x14
 link(rel='apple-touch-icon', sizes='152x152', href='images/fav/apple-icon-152x152.png')
 link(rel='apple-touch-icon', sizes='180x180', href='images/fav/apple-icon-180x180.png')
 
-link(rel='icon', type='image/png', sizes='192x192', href='images/fav/android-icon-192x192.png')
-link(rel='icon', type='image/png', sizes='32x32', href='images/fav/favicon-32x32.png')
-link(rel='icon', type='image/png', sizes='96x96', href='images/fav/favicon-96x96.png')
-link(rel='icon', type='image/png', sizes='16x16', href='images/fav/favicon-16x16.png')
-link(rel='manifest', href='images/fav/manifest.json')
-
 meta(name='msapplication-TileColor', content='#ffffff')
 meta(name='msapplication-TileImage', content='images/fav/ms-icon-144x144.png')
 meta(name='theme-color', content='#ffffff')
 
 meta(property='og:url', content='https://kurtobando.com/')
-meta(property='og:image', content='images/preview.png')
+//meta(property='og:image', content='images/preview.png')
 meta(property='og:description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
 meta(property='og:title', content='Hello, I am Kurt!')
 meta(property='og:site_name', content='Hello, I am Kurt!')
@@ -39,13 +33,13 @@ meta(property='og:see_also', content='https://kurtobando.com/')
 
 meta(itemprop='name', content='Hello, I am Kurt!')
 meta(itemprop='description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
-meta(itemprop='image', content='images/preview.png')
+//meta(itemprop='image', content='images/preview.png')
 
 meta(name='twitter:card', content='an aspiring cinematographer and front-end developer, founder of cityescape.ph')
-meta(name='twitter:url', content='images/preview.png')
+//meta(name='twitter:url', content='images/preview.png')
 meta(name='twitter:title', content='Hello, I am Kurt!')
 meta(name='twitter:description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
-meta(name='twitter:image', content='images/preview.png')
+//meta(name='twitter:image', content='images/preview.png')
 
 title Hello I am Kurt!
 
