--- a/src/jade/head.jade
+++ b/src/jade/head.jade
@@ -5,7 +5,7 @@ meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 meta(name='description', content='Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph')
 meta(name='keywords', content='kurt obando, portfolio')
 
-link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.6.3/css/all.css', integrity='sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/', crossorigin='anonymous')
 link(href='https://fonts.googleapis.com/css?family=Lora:400,700', rel='stylesheet')
 link(href='https://fonts.googleapis.com/css?family=Montserrat:300,400', rel='stylesheet')
 link(rel='stylesheet', href='css/style.css')
