add primary color

--- a/src/sass/__variables.scss
+++ b/src/sass/__variables.scss
@@ -1,3 +1,5 @@
 $font-montserrat:           'Montserrat', sans-serif;
 $font-lora:                 'Lora', serif;
 $font-size: 16px;
+
+$color-primary: #eb971f;
