--- a/src/sass/__variables.scss
+++ b/src/sass/__variables.scss
@@ -3,3 +3,11 @@ $font-lora:                 'Lora', serif;
 $font-size: 16px;
 
 $color-primary: #eb971f;
+
+$max-width: 	1600px;
+
+$breakpoints-tiny-mobile: 	320px;
+$breakpoints-small-mobile: 	480px;
+$breakpoints-tablet: 		768px;
+$breakpoints-desktop: 		992px;
+$breakpoints-wide: 			1200px;
