--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,10 @@
 @import "normalize.css";
 
 @import '__variables';
-
+@import '__mixins';
+@import '__defaults';
+@import '__buttons';
+@import '__header';
+@import '__sections';
+@import '__scrollbars';
+@import '__display';
