--- a/src/sass/__defaults.scss
+++ b/src/sass/__defaults.scss
@@ -1,3 +1,7 @@
+*{
+	box-sizing: border-box;
+}
+
 h1, h2, h3, h4, h5, h6{
     font-family: $font-lora;
     color: inherit;
@@ -13,7 +17,8 @@ h1{
 
 p{
     font-family: $font-montserrat;
-    font-size: 24px;
+//     font-size: 24px;
+	font-size: 20px;
     letter-spacing: -1px;
 }
 
@@ -22,3 +27,4 @@ a{
 	color: inherit;
 	font-family: inherit;
 }
+
