--- a/src/index.jade
+++ b/src/index.jade
@@ -9,23 +9,29 @@ html(lang='en')
 			
 			.section__content
 				.display-flex.display-flex--center
-					
 						h1 Hi, i am Kurt
 						p i design, code,  solve web problems and founder of cityescape.ph
 
 		section.section
 			.section__content
-				.display-flex.display-flex--center
-					h1 Ideal cityescape.ph landing page, can't wait to get this release.
-					p. 
-						Explore and be part of the community site. 
-						Meet our contributors who have the same interest as yours. You'll love them!
-					a(href="http://demo.kurtobando.com/cityescapeph/").button.button-primary view demo
+				.work
+					.work__content
+						.work__image
+							.work__image--iphone
+								img(src="images/iPhone-X-Mockup.png")
+							.work__image--desktop
+								img(src="images/Desktop-Mockup.png")
+						
+						.work__detail
+							h1 Ideal cityescape.ph landing page, can't wait to get this release.
+							p. 
+								Explore and be part of the community site. 
+								Meet our contributors who have the same interest as yours. You'll love them!
+							a(href="http://demo.kurtobando.com/cityescapeph/").button.button-primary view demo
 
 		section.section
 			.section__content
 				.display-flex.display-flex--center
-					
 						h1 Do you see potential on my works?
 						p Let me know at me@kurtobando.com
 
