--- a/src/sass/__works.scss
+++ b/src/sass/__works.scss
@@ -28,18 +28,18 @@
         .work__content{
             .work__image{
                 display: grid;
-                grid-template-columns: 130px auto auto;
-                grid-template-rows: repeat(3, 150px);
+                grid-template-columns: 130px 130px auto;
+                grid-template-rows: auto auto auto 50px;
                 
                 .work__image--desktop{
                     display: block;
                     grid-column: 2/4;
-                    grid-row: 1/5;
+                    grid-row: 1/4;
                     z-index: 1;
                 }
                 .work__image--iphone{
                     grid-column: 1/3;
-                    grid-row: 2/5;
+                    grid-row: 3/5;
                     z-index: 2;
                 }
             }
