add archor points for menu links

--- a/src/index.jade
+++ b/src/index.jade
@@ -7,12 +7,12 @@ html(lang='en')
 		section.section
 			include jade/header.jade
 			
-			.section__content
+			.section__content#about
 				.display-flex.display-flex--center
 						h1 Hi, i am Kurt
 						p i design, code,  solve web problems and founder of cityescape.ph
 
-		section.section
+		section#work.section
 			.section__content
 				.work
 					.work__content
@@ -29,7 +29,7 @@ html(lang='en')
 								Meet our contributors who have the same interest as yours. You'll love them!
 							a(href="http://demo.kurtobando.com/cityescapeph/").button.button-primary view demo
 
-		section.section
+		section#contact.section
 			.section__content
 				.display-flex.display-flex--center
 						h1 Do you see potential on my works?
