--- a/src/jade/header.jade
+++ b/src/jade/header.jade
@@ -5,6 +5,6 @@
 			a(href="#", id="navigation", active="false")
 				li.fas.fa-bars
 			nav(id="navigation-target")
-				a(href="#") work
-				a(href="#") contact
-				a(href="#") about
+				a(href="#work") work
+				a(href="#contact") contact
+				a(href="#about") about
