prepare layout for desktop view

--- a/src/index.jade
+++ b/src/index.jade
@@ -18,9 +18,9 @@ html(lang='en')
 					.work__content
 						.work__image
 							.work__image--iphone
-								img(src="images/iPhone-X-Mockup.png")
+								img(src="images/iPhone-X-Mockup.png", alt="cityescape iPhone view")
 							.work__image--desktop
-								img(src="images/Desktop-Mockup.png")
+								img(src="images/Desktop-Mockup.png", alt="cityescape Desktop view")
 						
 						.work__detail
 							h1 Ideal cityescape.ph landing page, can't wait to get this release.
