--- a/src/sass/__header.scss
+++ b/src/sass/__header.scss
@@ -11,6 +11,7 @@
 		display: inherit;
 		justify-content: inherit;
 		flex-direction: inherit;
+		margin-bottom: 2em;
         
         a{
 // 			font-size: 2.5rem;
@@ -29,10 +30,11 @@
                 font-family: $font-lora;
 // 				font-size: 48px!important;
 				font-size: 2.5rem!important;
+				transition: padding 0.3s;
 				
 				&:hover{
-					color: transparent;
-					-webkit-text-stroke: 0.5px #fff;
+					border-right: 5px solid #fff;
+					padding-right: 1em;
 				}
             }
         }
@@ -59,3 +61,27 @@
 		}
 	}
 }
+
+@include at-tablet{
+	.header{
+		.header__navigation{
+			a{
+				font-size: 24px;
+			}
+			
+			nav a{
+				font-size: 48px!important;
+			}
+		}
+	}
+}
+@include at-desktop{
+	.header{
+		.header__content{
+			max-width: 1500px;
+			margin: auto;
+		}
+	}
+	
+}
+	
