added outline button for download psd

--- a/src/sass/__buttons.scss
+++ b/src/sass/__buttons.scss
@@ -21,4 +21,9 @@
         background-color: transparent;
         border: 2px solid #eb971f;
     }
+    &-primary--outline{
+        color: #eb971f;
+        background-color: transparent;
+        border: 2px solid #eb971f;
+    }
 }
