--- a/src/index.jade
+++ b/src/index.jade
@@ -27,7 +27,8 @@ html(lang='en')
 							p. 
 								Explore and be part of the community site. 
 								Meet our contributors who have the same interest as yours. You'll love them!
-							a(href="http://demo.kurtobando.com/cityescapeph/").button.button-primary view demo
+							a(href="http://demo.kurtobando.com/cityescapeph/", target="_blank").button.button-primary view demo
+							a(href="#", target="_blank").button.button-primary.button-primary--outline download PSD
 
 		section#contact.section
 			.section__content
