--- a/src/sass/__works.scss
+++ b/src/sass/__works.scss
@@ -13,7 +13,12 @@
                 display: none;
             }
         }
-        .work__detail{}
+        .work__detail{
+            .button{
+                margin-right: 0.5em;
+                margin-bottom: 0.5em;
+            }
+        }
     }
 }
 
