added url in download PSD, and alter meta tags

--- a/src/index.jade
+++ b/src/index.jade
@@ -28,7 +28,7 @@ html(lang='en')
 								Explore and be part of the community site. 
 								Meet our contributors who have the same interest as yours. You'll love them!
 							a(href="http://demo.kurtobando.com/cityescapeph/", target="_blank").button.button-primary view demo
-							a(href="#", target="_blank").button.button-primary.button-primary--outline download PSD
+							a(href="http://links.kurtobando.com/demo-cityescape-ph", target="_blank").button.button-primary.button-primary--outline download PSD
 
 		section#contact.section
 			.section__content
