--- a/src/sass/__header.scss
+++ b/src/sass/__header.scss
@@ -52,6 +52,8 @@
 		justify-content: space-between;
 	}
 	.header__navigation{
+		height: calc(100vh - 100px);
+		
 		a#navigation:hover{
 			color: #fff;
 		}
