--- a/src/sass/__scrollbars.scss
+++ b/src/sass/__scrollbars.scss
@@ -1,5 +1,8 @@
 body{
     &::-webkit-scrollbar{
-        width: 0;
+        width: 8px;
     }
+	&::-webkit-scrollbar-thumb{
+		background-color: #444;
+	}
 }
