about, and project page

--- a/src/sass/__scrollbars.scss
+++ b/src/sass/__scrollbars.scss
@@ -1,8 +1,8 @@
 body{
     &::-webkit-scrollbar{
-        width: 8px;
+        width: $scrollbar-width;
     }
 	&::-webkit-scrollbar-thumb{
-		background-color: #444;
+		background-color: $scrollbar-color;
 	}
 }
