--- a/src/contact.jade
+++ b/src/contact.jade
@@ -17,7 +17,19 @@ html(lang='en')
 					include jade/__navigation.jade
 					
 					section(style="text-align: center;")
-						h1 Do you see potential on my works?
-						p Let me know at me@kurtobando.com
+						h1. 
+							Do you see potential on my works? <br>
+							Let me know. <br>
+							
+						form(name="form-contact", action="", method="get", style="width: 100%; max-width: 700px; margin: 0em auto 5em auto;").form.form-contact
+							.form-contact__content
+								div.form-contact__name
+									input(name="name", placeholder="full name", type="text")
+								div.form-contact__email
+									input(name="email", placeholder="email address e.g user@gmail.com", type="email")
+								div.form-contact__message
+									textarea(name="message", placeholder="your message here ...")
+								div.form-contact__submit
+									input(name="submit", type="submit", value="send message").button.button-primary.button-round.color-white
 
 		include jade/footer.jade
