replace a tag for navigation icon, to span tag

--- a/src/jade/__navigation-offset.jade
+++ b/src/jade/__navigation-offset.jade
@@ -1,6 +1,6 @@
 .navigation-offset.color-white
 	.navigation-offset__content.container
-			a(href="#", style="font-size: 1.5em; padding: 2em; padding-right: 1.2em; display: inline-block; color: inherit;" )#navigation_icon_close
+			span( style="font-size: 1.5em; padding: 2em; padding-right: 1.2em; display: inline-block; color: inherit; cursor: pointer;" )#navigation_icon_close
 				span(style="color: inherit;").fas.fa-times
 
 			ul.navigation-offset__menu.color-white
