--- a/src/jade/__navigation.jade
+++ b/src/jade/__navigation.jade
@@ -2,6 +2,6 @@
 	.header__content(style="display: flex; justify-content: space-between;")
 		.header__brand
 		.header__navigation
-			a(href="#" style="font-size: 1.5em; padding: 2em 0em; display: inline-block;" )#navigation_icon
+			span(style="font-size: 1.5em; padding: 2em 0em; display: inline-block; cursor: pointer;" )#navigation_icon
 				span.fas.fa-bars
 			
