change favicon and preview image

--- a/src/projects.jade
+++ b/src/projects.jade
@@ -23,8 +23,8 @@ html(lang='en')
 									h1 Ideal cityescape.ph landing page, can't wait to get this release.
 									
 								.project-card__images
-									img(src="images/iPhone-X-Mockup.png", alt="cityescape iPhone view")
-									img(src="images/Desktop-Mockup.png", alt="cityescape Desktop view")
+									img(src="images/iPhone-X-Mockup-resize.png", alt="cityescape iPhone view")
+									img(src="images/Desktop-Mockup-resize.jpg", alt="cityescape Desktop view")
 								
 								.project-card__body
 									h3 Reason behind for this project?
