--- a/src/contact.jade
+++ b/src/contact.jade
@@ -24,7 +24,7 @@ html(lang='en')
 						form(name="formContact", action="../php/", method="POST", autocomplete="off", style="width: 100%; max-width: 700px; margin: 0em auto 5em auto;").form.form-contact
 							.form-contact__content
 								div.form-contact__name
-									input(name="name", placeholder="full name", type="text")
+									input(name="name", placeholder="full name", type="text", autofocus="")
 								div.form-contact__email
 									input(name="email", placeholder="email address e.g user@gmail.com", type="email")
 								div.form-contact__message
