change ajax request using JQuery to Axios

--- a/src/contact.jade
+++ b/src/contact.jade
@@ -21,7 +21,7 @@ html(lang='en')
 							Do you see potential on my works? <br>
 							Let me know. <br>
 							
-						form(name="formContact", action="../php/", method="POST", autocomplete="off", style="width: 100%; max-width: 700px; margin: 0em auto 5em auto;").form.form-contact
+						form(id="formContact", action="#", method="POST", autocomplete="off", style="width: 100%; max-width: 700px; margin: 0em auto 5em auto;").form.form-contact
 							.form-contact__content
 								div.form-contact__name
 									input(name="name", placeholder="full name", type="text", autofocus="")
