commit navigation styles with border bottom

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,8 @@ $font-size-sm:                $font-size-base * .875 !default;
 $primary:                     #209CEE !default;
 $secondary:                   #EE7220 !default;
 $success:                     #F7BD96 !default;
+$light:                       #606060 !default;
+$dark:                        #252525 !default;
+
+$link-color:                  $light !default;
+
