use display classes in headings and important text instead of font-size embedeed in style attr

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,3 +12,9 @@ $dark:                        #252525 !default;
 
 $link-color:                  $light !default;
 
+$display1-size:               3.5rem !default;
+$display2-size:               3rem!default;
+$display3-size:               2rem !default;
+$display4-size:               1.5rem !default;
+
+
