commit family font for p tags

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -1,4 +1,7 @@
 .navigation {
+  a {
+    font-family: $font-family-sans-serif;
+  }
   .active {
     color: $primary;
     border-bottom: 4px solid;
