--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $font-family-monospace:       'Montserrat', sans-serif;
 $font-size-base:              1rem !default;
 $font-size-lg:                $font-size-base * 1.25 !default;
 $font-size-sm:                $font-size-base * .875 !default;
+$font-family-base:            $font-family-monospace !default;
+$headings-font-family:        $font-family-sans-serif !default;
 
 $primary:                     #209CEE !default;
 $secondary:                   #EE7220 !default;
