--- a/src/styles/_project.template.scss
+++ b/src/styles/_project.template.scss
@@ -1,19 +1,23 @@
 .project-template{
   h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
+    margin-top: 4rem;
   }
   pre {
     background-color: $dark;
     color: #fff;
     padding: 1.2rem;
     border-radius: 2px;
+    font-family: 'Ubuntu Mono', monospace;
     code {
+      font-family: inherit;
       color: inherit;
       font-weight: normal;
       background-color: inherit;
     }
   }
   code {
+    font-family: 'Ubuntu Mono', monospace;
     color: $dark;
     font-weight: bold;
   }
