add require, minlenght, and maxlenght to contact form

--- a/components/ContactForm.module.css
+++ b/components/ContactForm.module.css
@@ -21,13 +21,19 @@
     @apply border border-solid border-primary border-opacity-100;
 }
 
-.ContactForm form input[type="button"] {
+.ContactForm form input[type="submit"] {
     @apply bg-dark;
     @apply p-3;
     color: #ffffff;
     border: none !important;
 }
 
-.ContactForm form input[type="button"]:hover {
+.ContactForm form input[type="submit"]:hover {
     @apply bg-primary;
+}
+
+.ContactForm form span {
+    @apply block;
+    @apply text-sm;
+    color: red;
 }
