style navigation if href is the current path

--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -14,3 +14,8 @@
     @apply border-b-4 border-primary;
     @apply text-primary;
 }
+
+.Navigation li a.isCurrentPath {
+    @apply border-b-4 border-primary;
+    @apply text-primary;
+}
